<resources>
    <string name="app_name">My Application</string>
    <string name="data_binding_main">DataBinding测试学习首页</string>
    <string name="data_binding_test1">DataBinding测试学习页面1</string>
    <string name="data_binding_test2">DataBinding测试学习页面2</string>
    <string name="data_binding_test3">DataBinding测试学习页面3</string>
    <string name="data_binding_test4">DataBinding测试学习页面4</string>
    <string name="name_and_phone">姓名:%1$1s 手机号:%2$1s</string>
    <string name="format_student">我是一名学生，我的名字是%1$1s,今年%2$1d岁</string>
    <string name="format_teacher">我是一名老师，我的名字是%1$1s,我教的科目是%2$1s</string>
    <string name="life_cycle_test1">Lifecycle学习测试页面1</string>
    <string name="view_model_test1">ViewModel学习测试页面1</string>
</resources>
